# chroma-extract

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: bench_algorithms.rs
examples/: extract.rs
src/: color.rs  error.rs  lib.rs  main.rs  wasm.rs
src/algorithms/: kmeans.rs  median_cut.rs  mod.rs  octree.rs
